# c-ice

./: .gitignore  CMakeLists.txt
projects/Engine/src/Core/: SDL2_Includer.h  Timer.c  Window_private.c
projects/Engine/src/Framework/: Crossplatform_.h  Inline.h  Log.h  Memory_.c  Memory_.h  UnitTest.h
projects/Engine/src/Graphics/: Font.c
projects/UT/String/src/: main.c
